--- a/Behavior Cloning.ipynb
+++ b/Behavior Cloning.ipynb
@@ -203,7 +203,7 @@
    "outputs": [],
    "source": [
     "epochs = 50\n",
-    "batch_size = 64\n",
+    "batch_size = 32\n",
     "\n",
     "train_data_size = len(train_data)\n",
     "test_data_size = len(test_data)\n",
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
     "model = Sequential()\n",
     "model.add(Cropping2D(cropping=((55,30),(0,0)), input_shape=(160, 320, 3)))\n",
     "model.add(Lambda(lambda x: x/127.5 - 1.0, input_shape=(75, 320, 3)))\n",
-    "model.add(Conv2D(16, (8,8), strides=(4, 4)))\n",
+    "model.add(Conv2D(16, (5,5), strides=(4, 4)))\n",
     "model.add(ELU())\n",
     "model.add(Conv2D(32, (5,5), strides=(2, 2)))\n",
     "model.add(ELU())\n",
@@ -260,24 +260,54 @@
     "model.add(Dropout(.5))\n",
     "model.add(ELU())\n",
     "model.add(Dense(64))\n",
+    "model.add(Dropout(.2))\n",
     "model.add(ELU())\n",
     "model.add(Dense(1))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense, Activation, Lambda, Flatten, Dropout\n",
+    "from keras.layers.convolutional import Conv2D, Cropping2D\n",
+    "from keras.layers.advanced_activations import ELU\n",
+    "from keras.optimizers import Adam\n",
+    "\n",
+    "model = Sequential()\n",
+    "model.add(Cropping2D(cropping=((55,30),(0,0)), input_shape=(160, 320, 3)))\n",
+    "model.add(Lambda(lambda x: x/127.5 - 1.0, input_shape=(75, 320, 3)))\n",
+    "model.add(Conv2D(16, (8, 8), strides=(4, 4), padding=\"same\"))\n",
+    "model.add(ELU())\n",
+    "model.add(Conv2D(32, (5, 5), strides=(2, 2), padding=\"same\"))\n",
+    "model.add(ELU())\n",
+    "model.add(Conv2D(64, (5, 5), strides=(2, 2), padding=\"same\"))\n",
+    "model.add(Flatten())\n",
+    "model.add(Dropout(.2))\n",
+    "model.add(ELU())\n",
+    "model.add(Dense(512))\n",
+    "model.add(Dropout(.5))\n",
+    "model.add(ELU())\n",
+    "model.add(Dense(1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "model.compile(optimizer=\"adam\", loss='mse', metrics=['accuracy'])"
+    "model.compile(optimizer=Adam(lr=0.0001), loss='mse', metrics=['accuracy'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -285,32 +315,73 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/50\n",
-      "164/163 [==============================] - 31s - loss: 0.0175 - acc: 0.6089 - val_loss: 0.0228 - val_acc: 0.6220\n",
+      "82/81 [==============================] - 19s - loss: 0.0585 - acc: 0.5997 - val_loss: 0.0289 - val_acc: 0.6220\n",
       "Epoch 2/50\n",
-      "164/163 [==============================] - 30s - loss: 0.0171 - acc: 0.6087 - val_loss: 0.0232 - val_acc: 0.6220\n",
+      "82/81 [==============================] - 18s - loss: 0.0402 - acc: 0.6105 - val_loss: 0.0255 - val_acc: 0.6220\n",
       "Epoch 3/50\n",
-      "164/163 [==============================] - 30s - loss: 0.0165 - acc: 0.6088 - val_loss: 0.0258 - val_acc: 0.6220\n",
+      "82/81 [==============================] - 18s - loss: 0.0331 - acc: 0.6027 - val_loss: 0.0240 - val_acc: 0.6220\n",
       "Epoch 4/50\n",
-      "164/163 [==============================] - 30s - loss: 0.0162 - acc: 0.6090 - val_loss: 0.0239 - val_acc: 0.6220\n",
+      "82/81 [==============================] - 18s - loss: 0.0314 - acc: 0.6115 - val_loss: 0.0242 - val_acc: 0.6220\n",
       "Epoch 5/50\n",
-      "164/163 [==============================] - 30s - loss: 0.0157 - acc: 0.6083 - val_loss: 0.0257 - val_acc: 0.6220\n",
+      "82/81 [==============================] - 18s - loss: 0.0292 - acc: 0.6103 - val_loss: 0.0228 - val_acc: 0.6220\n",
       "Epoch 6/50\n",
-      "164/163 [==============================] - 30s - loss: 0.0156 - acc: 0.6092 - val_loss: 0.0255 - val_acc: 0.6220\n",
+      "82/81 [==============================] - 18s - loss: 0.0301 - acc: 0.6096 - val_loss: 0.0224 - val_acc: 0.6220\n",
       "Epoch 7/50\n",
-      "164/163 [==============================] - 30s - loss: 0.0155 - acc: 0.6085 - val_loss: 0.0261 - val_acc: 0.6220\n",
+      "82/81 [==============================] - 18s - loss: 0.0259 - acc: 0.6046 - val_loss: 0.0225 - val_acc: 0.6220\n",
       "Epoch 8/50\n",
-      "164/163 [==============================] - 30s - loss: 0.0157 - acc: 0.6089 - val_loss: 0.0244 - val_acc: 0.6220\n",
+      "82/81 [==============================] - 18s - loss: 0.0264 - acc: 0.6096 - val_loss: 0.0224 - val_acc: 0.6220\n",
       "Epoch 9/50\n",
-      "164/163 [==============================] - 30s - loss: 0.0164 - acc: 0.6081 - val_loss: 0.0249 - val_acc: 0.6220\n",
+      "82/81 [==============================] - 18s - loss: 0.0246 - acc: 0.6113 - val_loss: 0.0222 - val_acc: 0.6220\n",
       "Epoch 10/50\n",
-      " 50/163 [========>.....................] - ETA: 16s - loss: 0.0153 - acc: 0.6019"
+      "82/81 [==============================] - 18s - loss: 0.0255 - acc: 0.6101 - val_loss: 0.0218 - val_acc: 0.6220\n",
+      "Epoch 11/50\n",
+      "82/81 [==============================] - 18s - loss: 0.0232 - acc: 0.6038 - val_loss: 0.0217 - val_acc: 0.6220\n",
+      "Epoch 12/50\n",
+      "82/81 [==============================] - 18s - loss: 0.0235 - acc: 0.6105 - val_loss: 0.0221 - val_acc: 0.6220\n",
+      "Epoch 13/50\n",
+      "82/81 [==============================] - 18s - loss: 0.0227 - acc: 0.6092 - val_loss: 0.0215 - val_acc: 0.6220\n",
+      "Epoch 14/50\n",
+      "82/81 [==============================] - 18s - loss: 0.0235 - acc: 0.6117 - val_loss: 0.0217 - val_acc: 0.6220\n",
+      "Epoch 15/50\n",
+      "82/81 [==============================] - 18s - loss: 0.0215 - acc: 0.6031 - val_loss: 0.0219 - val_acc: 0.6220\n",
+      "Epoch 16/50\n",
+      "82/81 [==============================] - 18s - loss: 0.0221 - acc: 0.6109 - val_loss: 0.0221 - val_acc: 0.6220\n",
+      "Epoch 17/50\n",
+      "82/81 [==============================] - 18s - loss: 0.0213 - acc: 0.6096 - val_loss: 0.0217 - val_acc: 0.6220\n",
+      "Epoch 18/50\n",
+      "82/81 [==============================] - 18s - loss: 0.0219 - acc: 0.6117 - val_loss: 0.0217 - val_acc: 0.6220\n",
+      "Epoch 19/50\n",
+      "82/81 [==============================] - 18s - loss: 0.0206 - acc: 0.6033 - val_loss: 0.0219 - val_acc: 0.6220\n",
+      "Epoch 20/50\n",
+      "82/81 [==============================] - 18s - loss: 0.0213 - acc: 0.6103 - val_loss: 0.0224 - val_acc: 0.6220\n",
+      "Epoch 21/50\n",
+      "82/81 [==============================] - 18s - loss: 0.0204 - acc: 0.6096 - val_loss: 0.0218 - val_acc: 0.6220\n",
+      "Epoch 22/50\n",
+      "82/81 [==============================] - 18s - loss: 0.0214 - acc: 0.6115 - val_loss: 0.0217 - val_acc: 0.6220\n",
+      "Epoch 23/50\n",
+      " 9/81 [==>...........................] - ETA: 9s - loss: 0.0191 - acc: 0.6250"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-84-c16fc48b3d35>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcallbacks\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mModelCheckpoint\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mCallback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mcheckpoint_callback\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mModelCheckpoint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'model{epoch:02d}.h5'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mhistory\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit_generator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_generator\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msteps_per_epoch\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtrain_data_size\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m                    \u001b[0mvalidation_data\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mvalidation_generator\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalidation_steps\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mvalidation_data_size\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m,\u001b[0m                    \u001b[0mepochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m50\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_q_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcallbacks\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcheckpoint_callback\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/home/carnd/anaconda3/envs/carnd-term1/lib/python3.5/site-packages/keras/legacy/interfaces.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     86\u001b[0m                 warnings.warn('Update your `' + object_name +\n\u001b[1;32m     87\u001b[0m                               '` call to the Keras 2 API: ' + signature, stacklevel=2)\n\u001b[0;32m---> 88\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     89\u001b[0m         \u001b[0mwrapper\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_legacy_support_signature\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minspect\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetargspec\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfunc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     90\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/carnd/anaconda3/envs/carnd-term1/lib/python3.5/site-packages/keras/models.py\u001b[0m in \u001b[0;36mfit_generator\u001b[0;34m(self, generator, steps_per_epoch, epochs, verbose, callbacks, validation_data, validation_steps, class_weight, max_q_size, workers, pickle_safe, initial_epoch)\u001b[0m\n\u001b[1;32m   1108\u001b[0m                                         \u001b[0mworkers\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mworkers\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1109\u001b[0m                                         \u001b[0mpickle_safe\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpickle_safe\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1110\u001b[0;31m                                         initial_epoch=initial_epoch)\n\u001b[0m\u001b[1;32m   1111\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1112\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0minterfaces\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlegacy_generator_methods_support\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/carnd/anaconda3/envs/carnd-term1/lib/python3.5/site-packages/keras/legacy/interfaces.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     86\u001b[0m                 warnings.warn('Update your `' + object_name +\n\u001b[1;32m     87\u001b[0m                               '` call to the Keras 2 API: ' + signature, stacklevel=2)\n\u001b[0;32m---> 88\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     89\u001b[0m         \u001b[0mwrapper\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_legacy_support_signature\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minspect\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetargspec\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfunc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     90\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/carnd/anaconda3/envs/carnd-term1/lib/python3.5/site-packages/keras/engine/training.py\u001b[0m in \u001b[0;36mfit_generator\u001b[0;34m(self, generator, steps_per_epoch, epochs, verbose, callbacks, validation_data, validation_steps, class_weight, max_q_size, workers, pickle_safe, initial_epoch)\u001b[0m\n\u001b[1;32m   1857\u001b[0m                             \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1858\u001b[0m                         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1859\u001b[0;31m                             \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwait_time\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1860\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1861\u001b[0m                     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mhasattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgenerator_output\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'__len__'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
     "from keras.callbacks import ModelCheckpoint, Callback\n",
     "checkpoint_callback = ModelCheckpoint('model{epoch:02d}.h5')\n",
-    "history = model.fit_generator(train_generator, steps_per_epoch=train_data_size/batch_size/2, \\\n",
+    "history = model.fit_generator(train_generator, steps_per_epoch=train_data_size/batch_size/4, \\\n",
     "                   validation_data=validation_generator, validation_steps=validation_data_size/batch_size, \\\n",
     "                   epochs=50, max_q_size=1, callbacks=[checkpoint_callback])"
    ]
@@ -324,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 85,
    "metadata": {
     "collapsed": true
    },
@@ -335,15 +406,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('loss', 77.54616483392563)\n",
-      "('acc', 0.96808155080213909)\n"
+      "('loss', 0.023051161903570941)\n",
+      "('acc', 0.61186835106382975)\n"
      ]
     }
    ],
@@ -354,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 87,
    "metadata": {
     "collapsed": true
    },
