limit small steering angles

--- a/Behavior Cloning.ipynb
+++ b/Behavior Cloning.ipynb
@@ -31,7 +31,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "lines = []\n",
@@ -47,12 +49,13 @@
     "\n",
     "fw = open(\"./data/driving_log_updated.csv\", \"w\")\n",
     "for line in lines:\n",
-    "    img = cv2.imread(line[0], cv2.IMREAD_COLOR)\n",
-    "    img = np.fliplr(img)\n",
-    "    new_filename = line[0][:-4]+\"_flipped.jpg\"\n",
     "    fw.write(\"{},{},{},{},{}\\n\".format(*line))\n",
-    "    fw.write(\"{},{},{},{},{}\\n\".format(new_filename, -1.0 * float(line[1]), line[2], line[3], line[4]))\n",
-    "    cv2.imwrite(new_filename, img)\n",
+    "    if abs(line[1]) > 0.3:\n",
+    "        new_filename = line[0][:-4]+\"_flipped.jpg\"\n",
+    "        img = cv2.imread(line[0], cv2.IMREAD_COLOR)\n",
+    "        img = np.fliplr(img)\n",
+    "        fw.write(\"{},{},{},{},{}\\n\".format(new_filename, -1.0 * float(line[1]), line[2], line[3], line[4]))\n",
+    "        cv2.imwrite(new_filename, img)\n",
     "    \n",
     "fw.close()"
    ]
@@ -130,7 +133,9 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -151,40 +156,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import sklearn\n",
+    "import random\n",
     "\n",
     "def generator(samples, batch_size=32):\n",
     "    num_samples = len(samples)\n",
     "    samples = sklearn.utils.shuffle(samples)\n",
     "    while 1: # Loop forever so the generator never terminates\n",
-    "        for offset in range(0, num_samples, batch_size):\n",
-    "            batch_samples = samples[offset:offset+batch_size-1]\n",
+    "        offset = 0            \n",
     "\n",
-    "            vals = np.zeros((batch_size, 1))\n",
-    "            imgs = np.zeros((batch_size, 160, 320, 3))\n",
-    "            index = 0\n",
-    "            for batch_sample in batch_samples:\n",
-    "                filename = batch_sample[0]\n",
-    "                center_image = cv2.imread(filename)\n",
-    "                imgs[index] = center_image\n",
-    "                index += 1\n",
-    "                try:\n",
-    "                    float(batch_sample[1])\n",
-    "                except:\n",
-    "                    print(batch_sample[1])\n",
-    "                vals[index][0] = batch_sample[1]\n",
+    "        vals = np.zeros((batch_size, 1))\n",
+    "        imgs = np.zeros((batch_size, 160, 320, 3))\n",
+    "        index = 0\n",
+    "        while index < batch_size:\n",
+    "            batch_sample = samples[offset]\n",
+    "            offset += 1\n",
+    "            if abs(batch_sample[1]) < .3 and random.random() < .5:\n",
+    "                continue\n",
+    "            filename = batch_sample[0]\n",
+    "            center_image = cv2.imread(filename)\n",
+    "            imgs[index] = center_image\n",
+    "            index += 1\n",
+    "            try:\n",
+    "                float(batch_sample[1])\n",
+    "            except:\n",
+    "                print(batch_sample[1])\n",
+    "            vals[index][0] = batch_sample[1]\n",
     "\n",
-    "            # trim image to only see section with road\n",
-    "            X_train = imgs\n",
-    "            y_train = vals\n",
+    "        # trim image to only see section with road\n",
+    "        X_train = imgs\n",
+    "        y_train = vals\n",
     "            \n",
-    "            yield X_train, y_train\n"
+    "        yield X_train, y_train\n"
    ]
   },
   {
@@ -233,7 +242,9 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from keras.models import Sequential\n",
@@ -268,7 +279,9 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from keras.models import Sequential\n",
@@ -308,7 +321,9 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -407,7 +422,9 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
