--- a/Behavior Cloning.ipynb
+++ b/Behavior Cloning.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -30,9 +30,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-20-19618c55e71e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m         \u001b[0mimg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfliplr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m         \u001b[0mfw\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"{},{},{},{},{}\\n\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnew_filename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1.0\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mline\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mline\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mline\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m         \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnew_filename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0mfw\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "lines = []\n",
     "with open(\"./data/driving_log.csv\") as f:\n",
@@ -100,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -130,16 +142,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11793 0.7041437783615954\n",
-      "3341 0.19948650585144495\n",
-      "1614 0.09636971578695963\n"
+      "13322 0.7022667369530838\n",
+      "3787 0.1996309963099631\n",
+      "1861 0.09810226673695309\n"
      ]
     }
    ],
@@ -152,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -177,7 +189,7 @@
     "            offset += 1\n",
     "            if offset >= len(samples):\n",
     "                offset = 0\n",
-    "            if abs(float(batch_sample[1])) < .4 and random.random() < .5:\n",
+    "            if None and abs(float(batch_sample[1])) < .4 and random.random() < .5:\n",
     "                continue\n",
     "            filename = batch_sample[0]\n",
     "            center_image = cv2.imread(filename)\n",
@@ -205,13 +217,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "epochs = 50\n",
+    "epochs = 70\n",
     "batch_size = 64\n",
     "\n",
     "train_data_size = len(train_data)\n",
@@ -228,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -241,9 +253,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.models import Sequential\n",
     "from keras.layers import Dense, Activation, Lambda, Flatten, Dropout\n",
@@ -286,7 +306,6 @@
     "from keras.layers import Dense, Activation, Lambda, Flatten, Dropout\n",
     "from keras.layers.convolutional import Conv2D, Cropping2D\n",
     "from keras.layers.advanced_activations import ELU\n",
-    "from keras.optimizers import Adam\n",
     "\n",
     "model = Sequential()\n",
     "model.add(Cropping2D(cropping=((55,30),(0,0)), input_shape=(160, 320, 3)))\n",
@@ -307,88 +326,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "from keras.optimizers import Adam\n",
+    "\n",
     "model.compile(optimizer=Adam(lr=0.0001), loss='mse', metrics=[ 'mse'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/50\n",
-      "62/61 [==============================] - 13s - loss: 13.3380 - mean_squared_error: 0.0696 - val_loss: 11.7421 - val_mean_squared_error: 0.0445\n",
-      "Epoch 2/50\n",
-      "62/61 [==============================] - 12s - loss: 10.3799 - mean_squared_error: 0.0485 - val_loss: 9.0529 - val_mean_squared_error: 0.0413\n",
-      "Epoch 3/50\n",
-      "62/61 [==============================] - 12s - loss: 7.9482 - mean_squared_error: 0.0420 - val_loss: 6.8896 - val_mean_squared_error: 0.0407\n",
-      "Epoch 4/50\n",
-      "62/61 [==============================] - 12s - loss: 6.0139 - mean_squared_error: 0.0376 - val_loss: 5.1860 - val_mean_squared_error: 0.0395\n",
-      "Epoch 5/50\n",
-      "62/61 [==============================] - 12s - loss: 4.5066 - mean_squared_error: 0.0372 - val_loss: 3.8668 - val_mean_squared_error: 0.0383\n",
-      "Epoch 6/50\n",
-      "62/61 [==============================] - 12s - loss: 3.3450 - mean_squared_error: 0.0350 - val_loss: 2.8584 - val_mean_squared_error: 0.0370\n",
-      "Epoch 7/50\n",
-      "62/61 [==============================] - 12s - loss: 2.4627 - mean_squared_error: 0.0335 - val_loss: 2.0983 - val_mean_squared_error: 0.0373\n",
-      "Epoch 8/50\n",
-      "62/61 [==============================] - 12s - loss: 1.7999 - mean_squared_error: 0.0321 - val_loss: 1.5296 - val_mean_squared_error: 0.0361\n",
-      "Epoch 9/50\n",
-      "62/61 [==============================] - 12s - loss: 1.3081 - mean_squared_error: 0.0312 - val_loss: 1.1117 - val_mean_squared_error: 0.0366\n",
-      "Epoch 10/50\n",
-      "62/61 [==============================] - 12s - loss: 0.9464 - mean_squared_error: 0.0301 - val_loss: 0.8049 - val_mean_squared_error: 0.0361\n",
-      "Epoch 11/50\n",
-      "62/61 [==============================] - 12s - loss: 0.6849 - mean_squared_error: 0.0310 - val_loss: 0.5835 - val_mean_squared_error: 0.0361\n",
-      "Epoch 12/50\n",
-      "62/61 [==============================] - 12s - loss: 0.4951 - mean_squared_error: 0.0300 - val_loss: 0.4250 - val_mean_squared_error: 0.0359\n",
-      "Epoch 13/50\n",
-      "62/61 [==============================] - 12s - loss: 0.3594 - mean_squared_error: 0.0291 - val_loss: 0.3112 - val_mean_squared_error: 0.0348\n",
-      "Epoch 14/50\n",
-      "62/61 [==============================] - 12s - loss: 0.2643 - mean_squared_error: 0.0296 - val_loss: 0.2307 - val_mean_squared_error: 0.0342\n",
-      "Epoch 15/50\n",
-      "62/61 [==============================] - 12s - loss: 0.1966 - mean_squared_error: 0.0292 - val_loss: 0.1749 - val_mean_squared_error: 0.0346\n",
-      "Epoch 16/50\n",
-      "62/61 [==============================] - 12s - loss: 0.1495 - mean_squared_error: 0.0296 - val_loss: 0.1344 - val_mean_squared_error: 0.0331\n",
-      "Epoch 17/50\n",
-      "62/61 [==============================] - 12s - loss: 0.1156 - mean_squared_error: 0.0289 - val_loss: 0.1086 - val_mean_squared_error: 0.0351\n",
-      "Epoch 18/50\n",
-      "62/61 [==============================] - 12s - loss: 0.0908 - mean_squared_error: 0.0273 - val_loss: 0.0873 - val_mean_squared_error: 0.0333\n",
-      "Epoch 19/50\n",
-      "62/61 [==============================] - 12s - loss: 0.0742 - mean_squared_error: 0.0274 - val_loss: 0.0729 - val_mean_squared_error: 0.0326\n",
-      "Epoch 20/50\n",
-      "62/61 [==============================] - 12s - loss: 0.0637 - mean_squared_error: 0.0285 - val_loss: 0.0643 - val_mean_squared_error: 0.0336\n",
-      "Epoch 21/50\n",
-      "62/61 [==============================] - 12s - loss: 0.0543 - mean_squared_error: 0.0272 - val_loss: 0.0568 - val_mean_squared_error: 0.0330\n",
-      "Epoch 22/50\n",
-      "62/61 [==============================] - 12s - loss: 0.0481 - mean_squared_error: 0.0270 - val_loss: 0.0509 - val_mean_squared_error: 0.0325\n",
-      "Epoch 23/50\n",
-      "62/61 [==============================] - 12s - loss: 0.0449 - mean_squared_error: 0.0282 - val_loss: 0.0482 - val_mean_squared_error: 0.0336\n",
-      "Epoch 24/50\n",
-      "62/61 [==============================] - 12s - loss: 0.0413 - mean_squared_error: 0.0278 - val_loss: 0.0448 - val_mean_squared_error: 0.0322\n",
-      "Epoch 25/50\n",
-      "62/61 [==============================] - 12s - loss: 0.0388 - mean_squared_error: 0.0276 - val_loss: 0.0428 - val_mean_squared_error: 0.0324\n",
-      "Epoch 26/50\n",
-      "62/61 [==============================] - 12s - loss: 0.0364 - mean_squared_error: 0.0268 - val_loss: 0.0410 - val_mean_squared_error: 0.0323\n",
-      "Epoch 27/50\n",
-      "62/61 [==============================] - 12s - loss: 0.0349 - mean_squared_error: 0.0266 - val_loss: 0.0404 - val_mean_squared_error: 0.0324\n",
-      "Epoch 28/50\n",
-      "62/61 [==============================] - 12s - loss: 0.0346 - mean_squared_error: 0.0271 - val_loss: 0.0381 - val_mean_squared_error: 0.0307\n",
-      "Epoch 29/50\n",
-      "62/61 [==============================] - 12s - loss: 0.0329 - mean_squared_error: 0.0261 - val_loss: 0.0379 - val_mean_squared_error: 0.0316\n",
-      "Epoch 30/50\n",
-      "62/61 [==============================] - 12s - loss: 0.0328 - mean_squared_error: 0.0267 - val_loss: 0.0378 - val_mean_squared_error: 0.0320\n",
-      "Epoch 31/50\n",
-      "62/61 [==============================] - 12s - loss: 0.0331 - mean_squared_error: 0.0273 - val_loss: 0.0375 - val_mean_squared_error: 0.0315\n",
-      "Epoch 32/50\n",
-      "25/61 [===========>..................] - ETA: 5s - loss: 0.0304 - mean_squared_error: 0.0246"
+      "Epoch 61/70\n",
+      "70/69 [==============================] - 14s - loss: 0.0215 - mean_squared_error: 0.0185 - val_loss: 0.0219 - val_mean_squared_error: 0.0187\n",
+      "Epoch 62/70\n",
+      "70/69 [==============================] - 13s - loss: 0.0215 - mean_squared_error: 0.0186 - val_loss: 0.0212 - val_mean_squared_error: 0.0184\n",
+      "Epoch 63/70\n",
+      "70/69 [==============================] - 13s - loss: 0.0215 - mean_squared_error: 0.0188 - val_loss: 0.0209 - val_mean_squared_error: 0.0181\n",
+      "Epoch 64/70\n",
+      "70/69 [==============================] - 13s - loss: 0.0210 - mean_squared_error: 0.0182 - val_loss: 0.0213 - val_mean_squared_error: 0.0184\n",
+      "Epoch 65/70\n",
+      "70/69 [==============================] - 13s - loss: 0.0212 - mean_squared_error: 0.0185 - val_loss: 0.0218 - val_mean_squared_error: 0.0189\n",
+      "Epoch 66/70\n",
+      "70/69 [==============================] - 13s - loss: 0.0213 - mean_squared_error: 0.0185 - val_loss: 0.0209 - val_mean_squared_error: 0.0182\n",
+      "Epoch 67/70\n",
+      "70/69 [==============================] - 13s - loss: 0.0209 - mean_squared_error: 0.0181 - val_loss: 0.0212 - val_mean_squared_error: 0.0184\n",
+      "Epoch 68/70\n",
+      "70/69 [==============================] - 13s - loss: 0.0211 - mean_squared_error: 0.0182 - val_loss: 0.0215 - val_mean_squared_error: 0.0184\n",
+      "Epoch 69/70\n",
+      "70/69 [==============================] - 13s - loss: 0.0210 - mean_squared_error: 0.0182 - val_loss: 0.0208 - val_mean_squared_error: 0.0181\n",
+      "Epoch 70/70\n",
+      "70/69 [==============================] - 13s - loss: 0.0207 - mean_squared_error: 0.0179 - val_loss: 0.0215 - val_mean_squared_error: 0.0187\n"
      ]
     }
    ],
@@ -397,7 +372,7 @@
     "checkpoint_callback = ModelCheckpoint('model{epoch:02d}.h5')\n",
     "history = model.fit_generator(train_generator, steps_per_epoch=train_data_size/batch_size/3, \\\n",
     "                   validation_data=validation_generator, validation_steps=validation_data_size/batch_size, \\\n",
-    "                   epochs=50, max_q_size=1, callbacks=[checkpoint_callback])"
+    "                   epochs=epochs, max_q_size=1, callbacks=[checkpoint_callback], initial_epoch=60)"
    ]
   },
   {
@@ -409,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -420,15 +395,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('loss', 0.026486937329173087)\n",
-      "('acc', 0.56031249999999999)\n"
+      "('loss', 0.020299196351940434)\n",
+      "('mean_squared_error', 0.017298458182873826)\n"
      ]
     }
    ],
@@ -439,7 +414,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('loss', 0.019879928541680178)\n",
+      "('mean_squared_error', 0.017041624966077508)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in zip(model.metrics_names, metrics):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
