--- a/Behavior Cloning.ipynb
+++ b/Behavior Cloning.ipynb
@@ -18,7 +18,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import csv\n",
@@ -275,10 +277,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "def nVidiaModel():\n",
-    "    \"\"\"\n",
-    "    Creates nVidea Autonomous Car Group model\n",
-    "    \"\"\"\n",
+    "def nvidia_model():\n",
     "    model = createPreProcessingLayers()\n",
     "    model.add(Convolution2D(24,5,5, subsample=(2,2), activation='relu'))\n",
     "    model.add(Convolution2D(36,5,5, subsample=(2,2), activation='relu'))\n",
@@ -312,27 +311,28 @@
    ],
    "source": [
     "\n",
-    "\n",
-    "model = Sequential()\n",
-    "#model.add(Cropping2D(cropping=((10,2),(0,0)), input_shape=(32, 32, 3)))\n",
-    "model.add(Lambda(lambda x: x/127.5 - 1.0, input_shape=(IMAGE_HEIGHT,IMAGE_WIDTH, 3)))\n",
-    "model.add(Conv2D(64, (5,5)))\n",
-    "model.add(ELU())\n",
-    "model.add(Conv2D(64, (5,5)))\n",
-    "model.add(ELU())\n",
-    "model.add(Conv2D(32, (3,3), strides=(2, 2)))\n",
-    "model.add(ELU())\n",
-    "model.add(Conv2D(32, (3,3), strides=(2, 2)))\n",
-    "model.add(ELU())\n",
-    "model.add(Flatten())\n",
-    "model.add(Dense(1024))\n",
-    "model.add(ELU())\n",
-    "model.add(Dense(512))\n",
-    "model.add(Dropout(.5))\n",
-    "model.add(ELU())\n",
-    "model.add(Dense(64))\n",
-    "model.add(ELU())\n",
-    "model.add(Dense(1))\n"
+    "def custom_model():\n",
+    "    model = Sequential()\n",
+    "    #model.add(Cropping2D(cropping=((10,2),(0,0)), input_shape=(32, 32, 3)))\n",
+    "    model.add(Lambda(lambda x: x/127.5 - 1.0, input_shape=(IMAGE_HEIGHT,IMAGE_WIDTH, 3)))\n",
+    "    model.add(Conv2D(64, (5,5)))\n",
+    "    model.add(ELU())\n",
+    "    model.add(Conv2D(64, (5,5)))\n",
+    "    model.add(ELU())\n",
+    "    model.add(Conv2D(32, (3,3), strides=(2, 2)))\n",
+    "    model.add(ELU())\n",
+    "    model.add(Conv2D(32, (3,3), strides=(2, 2)))\n",
+    "    model.add(ELU())\n",
+    "    model.add(Flatten())\n",
+    "    model.add(Dense(1024))\n",
+    "    model.add(ELU())\n",
+    "    model.add(Dense(512))\n",
+    "    model.add(Dropout(.5))\n",
+    "    model.add(ELU())\n",
+    "    model.add(Dense(64))\n",
+    "    model.add(ELU())\n",
+    "    model.add(Dense(1))\n",
+    "    return model\n"
    ]
   },
   {
@@ -360,21 +360,22 @@
     "from keras.layers.convolutional import Conv2D, Cropping2D\n",
     "from keras.layers.advanced_activations import ELU\n",
     "\n",
-    "model = Sequential()\n",
-    "#model.add(Cropping2D(cropping=((10,2),(0,0)), input_shape=(32, 32, 3)))\n",
-    "model.add(Lambda(lambda x: x/127.5 - 1.0, input_shape=(40,80, 3)))\n",
-    "model.add(Conv2D(16, 8, 8, subsample=(4, 4), border_mode=\"same\"))\n",
-    "model.add(ELU())\n",
-    "model.add(Conv2D(32, 5, 5, subsample=(2, 2), border_mode=\"same\"))\n",
-    "model.add(ELU())\n",
-    "model.add(Conv2D(64, 5, 5, subsample=(2, 2), border_mode=\"same\"))\n",
-    "model.add(Flatten())\n",
-    "model.add(Dropout(.2))\n",
-    "model.add(ELU())\n",
-    "model.add(Dense(512))\n",
-    "model.add(Dropout(.5))\n",
-    "model.add(ELU())\n",
-    "model.add(Dense(1))"
+    "def commaai_model():\n",
+    "    model = Sequential()\n",
+    "    model.add(Lambda(lambda x: x/127.5 - 1.0, input_shape=(40,80, 3)))\n",
+    "    model.add(Conv2D(16, 8, 8, subsample=(4, 4), border_mode=\"same\"))\n",
+    "    model.add(ELU())\n",
+    "    model.add(Conv2D(32, 5, 5, subsample=(2, 2), border_mode=\"same\"))\n",
+    "    model.add(ELU())\n",
+    "    model.add(Conv2D(64, 5, 5, subsample=(2, 2), border_mode=\"same\"))\n",
+    "    model.add(Flatten())\n",
+    "    model.add(Dropout(.2))\n",
+    "    model.add(ELU())\n",
+    "    model.add(Dense(512))\n",
+    "    model.add(Dropout(.5))\n",
+    "    model.add(ELU())\n",
+    "    model.add(Dense(1))\n",
+    "    return model"
    ]
   },
   {
@@ -386,7 +387,7 @@
    "outputs": [],
    "source": [
     "from keras.optimizers import Adam\n",
-    "\n",
+    "model = custom_model()\n",
     "model.compile(optimizer=Adam(lr=.0001), loss='mse', metrics=[ 'mse'])"
    ]
   },
@@ -454,7 +455,7 @@
    },
    "outputs": [],
    "source": [
-    "model.save(\"n_model_2.h5\")"
+    "model.save(\"model.h5\")"
    ]
   },
   {
@@ -467,7 +468,7 @@
    "source": [
     "from keras.models import load_model\n",
     "\n",
-    "model = load_model(\"model22.h5\")"
+    "model = load_model(\"model.h5\")"
    ]
   },
   {
